WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98225
Shrink ElementRareData by moving bool flags to NodeRareData.
https://bugs.webkit.org/show_bug.cgi?id=98225
Summary
Shrink ElementRareData by moving bool flags to NodeRareData.
Andreas Kling
Reported
2012-10-02 20:19:03 PDT
Someone did it right with the 'm_needsFocusAppearanceUpdateSoonAfterAttach' flag, we just need to move the rest of the (3) flags from ElementRareData to NodeRareData and we'll save 8 bytes per raredata.
Attachments
Patch
(7.95 KB, patch)
2012-10-02 20:23 PDT
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
Potch for londong
(8.00 KB, patch)
2012-10-03 05:34 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-10-02 20:23:35 PDT
Created
attachment 166800
[details]
Patch
Antti Koivisto
Comment 2
2012-10-02 20:30:07 PDT
Comment on
attachment 166800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=166800&action=review
r=me
> Source/WebCore/ChangeLog:9 > + Move all bool flags from ElementRareData to the bitfield in its base class NodeRareData. > + This shrinks ElementRareData by 8 bytes (on 64-bit.) Also removed some double raredata hash lookups.
Would be nice to tell why this is worth doing.
Andreas Kling
Comment 3
2012-10-03 05:34:37 PDT
Created
attachment 166867
[details]
Potch for londong
WebKit Review Bot
Comment 4
2012-10-03 05:55:14 PDT
Comment on
attachment 166867
[details]
Potch for londong Clearing flags on attachment: 166867 Committed
r130278
: <
http://trac.webkit.org/changeset/130278
>
WebKit Review Bot
Comment 5
2012-10-03 05:55:17 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6
2012-10-03 09:04:30 PDT
Comment on
attachment 166800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=166800&action=review
>> Source/WebCore/ChangeLog:9 >> + This shrinks ElementRareData by 8 bytes (on 64-bit.) Also removed some double raredata hash lookups. > > Would be nice to tell why this is worth doing.
Do we want a rare data compile time size assertion so people notice when they bloat it?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug