Source/WebCore/dom/ElementRareData.h
@@ -45,6 +45,14 @@ public:
 
     using NodeRareData::needsFocusAppearanceUpdateSoonAfterAttach;
     using NodeRareData::setNeedsFocusAppearanceUpdateSoonAfterAttach;
+    using NodeRareData::styleAffectedByEmpty;
+    using NodeRareData::setStyleAffectedByEmpty;
+    using NodeRareData::isInCanvasSubtree;
+    using NodeRareData::setIsInCanvasSubtree;
+#if ENABLE(FULLSCREEN_API)
+    using NodeRareData::containsFullScreenElement;
+    using NodeRareData::setContainsFullScreenElement;
+#endif
 
     bool hasCachedHTMLCollections() const
     {
@@ -111,14 +119,7 @@ public:
     OwnPtr<ElementShadow> m_shadow;
     OwnPtr<NamedNodeMap> m_attributeMap;
 
-    bool m_styleAffectedByEmpty : 1;
-    bool m_isInCanvasSubtree : 1;
-
     IntSize m_savedLayerScrollOffset;
-
-#if ENABLE(FULLSCREEN_API)
-    bool m_containsFullScreenElement;
-#endif
 };
 
 inline IntSize defaultMinimumSizeForResizing()
@@ -127,13 +128,7 @@ inline IntSize defaultMinimumSizeForResizing()
 }
 
 inline ElementRareData::ElementRareData()
-    : NodeRareData()
-    , m_minimumSizeForResizing(defaultMinimumSizeForResizing())
-    , m_styleAffectedByEmpty(false)
-    , m_isInCanvasSubtree(false)
-#if ENABLE(FULLSCREEN_API)
-    , m_containsFullScreenElement(false)
-#endif
+    : m_minimumSizeForResizing(defaultMinimumSizeForResizing())
 {
 }
 
